## XXX: Should probably set AC_PREFIX_DEFUALT to something good some day.

AC_INIT(README.PSE)
AC_CONFIG_HEADER(config.h)

##-- Canonical Host Type ------------------------------------------------------

# We pull a little trick here, pointing srcdir at ./scripts so that when it
# looks for and constructs the canonical path for "install-sh", it picks it
# up out of scripts, rather than forcing us to put it in . (which is an
# aesthetically bad location).

oldSrcDir="${srcdir}"
srcdir="${srcdir}/scripts"
AC_CANONICAL_HOST
srcdir="${oldSrcDir}"

##-- Host-Specific Defaults ---------------------------------------------------

AC_SUBST(CC)
AC_SUBST(CXX)
AC_SUBST(AS)
AC_SUBST(LD)
AC_SUBST(CFLAGS)
AC_SUBST(SOFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(LDRUN_PREFIX)
AC_SUBST(BINARYFLAGS)

AC_ARG_ENABLE(64bit,
	[  --enable-64bit		Compile in 64 bit mode],
	[is_64bit="$enableval"]
	[is_64bit=${is_64bit='no'}])

case $host in
  *-irix*) echo -n "Checking for /opt/MIPSpro/bin/cc... "
           if test -f /opt/MIPSpro/bin/cc ; then
             echo "yes"
             echo "  Using MIPSpro compilers instead of gcc; they're better"
	     if test "$is_64bit" = "yes" ; then
               BINARYFLAGS="-64 -mips4"
             else
               BINARYFLAGS="-n32 -mips4"
             fi
             CC=/opt/MIPSpro/bin/cc
             CXX=/opt/MIPSpro/bin/CC
             AS="/opt/MIPSpro/bin/as $BINARYFLAGS"
             LD=/opt/MIPSpro/bin/ld
             CFLAGS="-fullwarn -xansi -LANG:ansi-for-init-scope=ON ${CFLAGS} $BINARYFLAGS"
             SOFLAGS="-shared $BINARYFLAGS -no_unresolved -J\$(MAKE_PARALLELISM) -update_registry \$(OBJTOP)/so_locations ${SOFLAGS}"
             LDFLAGS="$BINARYFLAGS -no_unresolved -J\$(MAKE_PARALLELISM)"
             LDRUN_PREFIX="-Wl,-rpath -Wl,"
           else
             echo "no"
           fi
           if test "${CC}" = "" ; then
             if which CC > /dev/null 2>&1 ; then
               CXX=`which CC`
               echo "Using C++ compiler ${CXX}"
             fi
             if which cc > /dev/null 2>&1 ; then
               CC=`which cc`
               echo "Using C compiler ${CC}"
             fi
           fi

           # XXX: A Crock

           rm -f config.h
           echo "#ifndef SCI_CONFIG_H" >> config.h
           echo "#define SCI_CONFIG_H" >> config.h
           echo "#define SCI_MACHINE_SGI" >> config.h
           echo "#define SCI_VARIANT_Debug" >> config.h
           echo "#define SCI_ASSERTION_LEVEL_3" >> config.h
           echo "#define SCI_OPENGL" >> config.h
           echo "#define SCI_NORM_OGL" >> config.h
	   if test "$is_64bit" = "yes" ; then
             echo "#define SCI_IRIX_BIN_n64_mips4" >> config.h
	     echo "#define SCI_64BIT" >> config.h
	   else
             echo "#define SCI_IRIX_BIN_n32_mips4" >> config.h
	   fi	

           echo "#define TEMPLATE_TAG" >> config.h
           echo "#define TEMPLATE_BOX" >> config.h

           echo "#endif" >> config.h
           ;;
  *) AC_PROG_CC
     AC_PROG_CXX
     ;;
esac

##-- Find a C Compiler --------------------------------------------------------

## AC_PROG_CC
## AC_PROG_CXX

##-- Find Perl ----------------------------------------------------------------

AC_PATH_PROG(PERL, perl, none)
if test "${PERL}" = "none" ; then
  echo "  You must have perl on your path for configure to succeed."
  exit 1
fi

##-- Twitty SGI License Chatter -----------------------------------------------

echo -n "Checking if ${CC} talks too much... "
touch wow.c
if ${CC} -c wow.c 2>&1 | fgrep "requires a license password" > /dev/null ; then
  echo "yes"
  echo "  Using cc and CC wrappers in scripts/cc and scripts/CC to remove"
  echo "  irritating license verbosity from SGI's Varsity Pack MIPSpro"
  echo "  compilers."

  mkdir -p scripts
  sed "s+VERBOSE_CC+${CC}+g;" < ${srcdir}/scripts/cc.in > scripts/cc
  sed "s+VERBOSE_CC+${CXX}+g;" < ${srcdir}/scripts/cc.in > scripts/CC
  chmod 755 scripts/cc scripts/CC

  CC="$(OBJTOP)/scripts/cc"
  CXX="$(OBJTOP)/scripts/CC"
else
  echo "no"
fi
rm -f wow.c wow.o

## Get us something with which to install.  Sets INSTALL to the path of a BSD-
## compatible "install", or install-sh from this dist'n if there isn't one.
## XXX: I really want this to look in scripts/, not in ., for cleanliness.

## AC_PROG_INSTALL

##-- One Rarely Finds This ----------------------------------------------------

AC_CHECK_LIB(Kenny,life_signs,true,
             echo "  Oh my God!  They killed Kenny!  You bastards!")

##-- Dependency Regen Switch --------------------------------------------------

echo -n "Determining cc dependency regen switch: "
rm -f configure-test.*
echo "#include <stdio.h>" > configure-test.c
CC_DEPEND_REGEN=''

# GCC just puts the dependency info in a .d when you provide the -MD switch.
if test "${CC_DEPEND_REGEN}" = "" ; then
  ${CC} -MD -c configure-test.c > /dev/null 2>&1
  if test -f configure-test.d ; then
    CC_DEPEND_REGEN='-MD'
  fi
fi

# SGI cc wants -MDupdate <filename>.
if test "${CC_DEPEND_REGEN}" = "" ; then
  ${CC} -MDupdate configure-test.d -c configure-test.c
  if test -f configure-test.d ; then
    CC_DEPEND_REGEN='-MDupdate $(basename $(notdir $@)).d'
  fi
fi

rm -f configure-test.*

if test "${CC_DEPEND_REGEN}" = "" ; then
  echo unknown
  echo "  Warning: Dependency information will not be maintained."
else
  echo $CC_DEPEND_REGEN
fi
AC_SUBST(CC_DEPEND_REGEN)

##-- How Many Processors ------------------------------------------------------

unset NUM_CPUS
echo -n "Determining physical processor count: "
case $host in
  *-irix*) NUM_CPUS="`TERM=dumb top -n 1 | fgrep CPUs | cut -d' ' -f1`"
           ;;
  *linux*) NUM_CPUS="`cat /proc/cpuinfo | fgrep processor | wc | cut -c1-7`"
           ;;
  *)       NUM_CPUS="1"
           ;;
esac
if ! NUM_CPUS="`expr $NUM_CPUS + 0 2> /dev/null`" ; then
  NUM_CPUS="1"
fi
echo $NUM_CPUS

MAKE_PARALLELISM="`expr ${NUM_CPUS} \* 2`"
export MAKE_PARALLELISM
AC_SUBST(MAKE_PARALLELISM)

##-- Find TCL -----------------------------------------------------------------

echo -n "Looking for Pre-built TCL 8.0.4... "
unset Wish80
if Wish80="`which tclsh8.0`" ; then
  unset cfsh
  cfsh="`dirname $Wish80`/../lib/tclConfig.sh"
  if test -f $cfsh ; then
    . $cfsh
  fi
fi
if test "$TCL_VERSION" = "8.0" -a "$TCL_PATCH_LEVEL" = ".4" ; then
  # TCL_PREFIX set by tclConfig.sh
  TCL_INCLUDE_DIR="${TCL_PREFIX}/include"
  TCL_LIB_DIR="${TCL_PREFIX}/lib"
  # TCL_LIB_FLAG set by tclConfig.sh, but needs eval'ing for debug flags
  TCL_LIB_FLAG="`eval echo $TCL_LIB_FLAG`"

  echo -L$TCL_LIB_DIR $TCL_LIB_FLAG

  if test "$TCL_LD_FLAGS" != "" ; then
    echo "  XXX: Check SGI ABI"
  fi

else
  echo "not found -- must build"
  echo "  Implement me."
  exit
fi

AC_SUBST(TCL_INCLUDE_DIR)
AC_SUBST(TCL_LIB_DIR)
AC_SUBST(TCL_LIB_FLAG)

##-- Find Tk ------------------------------------------------------------------

echo -n "Looking for Pre-built Tk 8.0.4... "
unset Wish80
if Wish80="`which wish8.0`" ; then
  unset cfsh
  cfsh="`dirname $Wish80`/../lib/tkConfig.sh"
  if test -f $cfsh ; then
    . $cfsh
  fi
fi
if test "$TK_VERSION" = "8.0" -a "$TK_PATCH_LEVEL" = ".4" ; then
  # TK_PREFIX set by tclConfig.sh
  TK_INCLUDE_DIR="${TK_PREFIX}/include"
  TK_LIB_DIR="${TK_PREFIX}/lib"
  # TK_LIB_FLAG set by tclConfig.sh, but needs eval'ing for debug flags
  TK_LIB_FLAG="`eval echo $TK_LIB_FLAG`"

  echo -L$TK_LIB_DIR $TK_LIB_FLAG

  # Can't check the SGI ABI 'cause LD_FLAGS doesn't get def'd in tkConfig.sh;
  # just assume the tk we find matches the tcl we find.

  if ! test "$TCL_PREFIX" = "$TK_PREFIX" ; then
    echo "  WARNING: Tcl and Tk not colocated; this might indicate a problem"
  fi

  if ! test "$TCL_VERSION" = "$TK_VERSION" -a \
            "$TCL_PATCH_LEVEL" = "$TK_PATCH_LEVEL" ; then
    echo "  ERROR: Tcl and Tk are not the same version & patch level; this is Wrong"
    exit
  fi

else
  echo "not found -- must build"
  BUILDING_TK=1
  echo "  Implement me."
  exit
fi

AC_SUBST(TK_INCLUDE_DIR)
AC_SUBST(TK_LIB_DIR)
AC_SUBST(TK_LIB_FLAG)

##-- Find iTcl ----------------------------------------------------------------

echo -n "Looking for Pre-built iTk 3.0... "
if test "$BUILDING_TK" = "" ; then
  unset Wish80
  if sh="`which itkwish3.0`" ; then
    unset cfsh
    shdir="`dirname $sh`"
    cfsh="$shdir/../lib/itkConfig.sh"
    if test -f $cfsh ; then
      . $cfsh
    fi
  fi
fi
if test "$ITCL_VERSION" = "3.0" ; then
  ITCL_PREFIX="`cd $shdir/.. ; pwd`"
  ITCL_INCLUDE_DIR="${ITCL_PREFIX}/include"
  ITCL_LIB_DIR="${ITCL_PREFIX}/lib"
  ITCL_LIB_FLAG="-litk3.0 -litcl3.0"

  echo -L$ITCL_PREFIX $ITCL_LIB_FLAG
else
  echo "not found -- must build"
  echo "  Implement me."
  exit
fi

AC_SUBST(ITCL_INCLUDE_DIR)
AC_SUBST(ITCL_LIB_DIR)
AC_SUBST(ITCL_LIB_FLAG)

##-- Check for header files ---------------------------------------------------

AC_ARG_ENABLE(enterleave,
	[  --enable-enterleave		Make gmake print out entering/leaving statements],
	[enterleave="$enableval"]
	[enterleave=${enterleave='no'}])

if test "$enterleave" = "yes" ; then
	NOPRINTDIR=EMPTY
else
	NOPRINTDIR="--no-print-directory"
fi
AC_SUBST(NOPRINTDIR)


##-- Check for header files ---------------------------------------------------

AC_CHECK_HEADERS(limits.h)
AC_CHECK_HEADERS(sys/select.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(sys/time.h)

##-- Generate Output Files ----------------------------------------------------

AC_OUTPUT(Makefile \
            scripts/compile.mk \
	    scripts/recurse.mk \
            scripts/targets.mk \
              SCICore/Makefile \
                SCICore/Containers/Makefile \
                SCICore/CoreDatatypes/Makefile \
                SCICore/Exceptions/Makefile \
                SCICore/Geom/Makefile \
                SCICore/Geometry/Makefile \
                SCICore/Malloc/Makefile \
                SCICore/Math/Makefile \
                SCICore/Multitask/Makefile \
                SCICore/Persistent/Makefile \
                SCICore/TclInterface/Makefile \
                SCICore/TkExtensions/Makefile \
                SCICore/Tester/Makefile \
                SCICore/Util/Makefile \
              PSECore/Makefile \
                PSECore/Comm/Makefile \
                PSECore/CommonDatatypes/Makefile \
                PSECore/Constraints/Makefile \
                PSECore/Dataflow/Makefile \
                PSECore/Widgets/Makefile \
              main/Makefile \
              PSECommon/Makefile \
                PSECommon/ThirdParty/Makefile \
                  PSECommon/ThirdParty/mpeg/Makefile \
                PSECommon/Modules/Makefile \
                  PSECommon/Modules/FEM/Makefile \
                  PSECommon/Modules/Readers/Makefile \
                  PSECommon/Modules/Salmon/Makefile \
                  PSECommon/Modules/Surface/Makefile \
                  PSECommon/Modules/Matrix/Makefile \
                  PSECommon/Modules/Iterators/Makefile \
                  PSECommon/Modules/Fields/Makefile \
                  PSECommon/Modules/Writers/Makefile \
                  PSECommon/Modules/Visualization/Makefile \
              Uintah/Makefile \
                Uintah/Datatypes/Makefile \
                  Uintah/Datatypes/Particles/Makefile \
                Uintah/Modules/Makefile \
                  Uintah/Modules/MPMViz/Makefile \
                  Uintah/Modules/Readers/Makefile \
         )

#              PSECore/Makefile \
#                PSECore/Comm/Makefile \
#                PSECore/CommonDatatypes/Makefile \
#                PSECore/Constraints/Makefile \
#                PSECore/Dataflow/Makefile \
#                PSECore/Distributed/Makefile \
#                PSECore/Modules/Makefile \
#                PSECore/Modules/FEM/Makefile \
#                PSECore/Modules/Fields/Makefile \
#                PSECore/Modules/Iterators/Makefile \
#                PSECore/Modules/Matrix/Makefile \
#                PSECore/Modules/Readers/Makefile \
#                PSECore/Modules/Salmon/Makefile \
#                PSECore/Modules/Visualization/Makefile \
#                PSECore/Modules/Writers/Makefile \
#                PSECore/Widgets/Makefile \
#              Uintah/Makefile \
#                Uintah/Datatypes/Makefile \
#                Uintah/Datatypes/Particles/Makefile \
#                Uintah/Modules/Makefile \
#                Uintah/Modules/MPMViz/Makefile \
#                Uintah/Modules/Readers/Makefile \
#         )
